# migrate_odoo

./: .gitignore  README.md  odoo.code-workspace  pyproject.toml
.github/: copilot-instructions.md
migrate/: README.md
migrate/v15_v16/: .gitignore  Blueprint.md  README.md  README_quickstart.md  code_conduct.md  config-sample.json  main.py  migration_guide.md  pyproject.toml  requirements.txt  test_database_creation.py
migrate/v15_v16/scripts/: generate_odoo_config.py
migrate/v15_v16/src/: __init__.py  cli.py  config.py  config_gen.py  config_generator.py  database_setup.py  database_setup_broken.py  database_setup_fixed.py  health.py  health_check.py  module_installer.py  utils.py  workflow.py
odoo_v15/: docker-compose.yml
odoo_v15/conf/: odoo.conf
odoo_v16/: docker-compose.yml
odoo_v16/conf/: odoo.conf
odoo_v17/: docker-compose.yml
odoo_v17/conf/: odoo.conf
odoo_v18/: docker-compose.yml
postgresql/: docker-compose.yml
