[project]
name = "migrate-odoo-workspace"
version = "1.0.0"
description = "Odoo Migration Workspace - Multi-version migration tools and utilities"
authors = [
    {name = "Migration Team"}
]
dependencies = [
    # Core dependencies from migration tools
    "psycopg2-binary>=2.9.0",
    "click>=8.0.0",
    "python-dateutil>=2.8.0",
    "requests>=2.25.0",
    "docker>=6.0.0",
    "colorama>=0.4.4",
    "tabulate>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    
    # MCP dependencies
    "mcp>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
requires-python = ">=3.10"

[project.scripts]
# Core migration tools - simplified
migrate-v15-v16 = "migrate.v15_v16.main:cli"
postgres-mcp = "pg_mcp.src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "migrate",
    "pg_mcp"
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0"
]

[tool.uv.workspace]
members = [
    "migrate/v15_v16",
    "pg_mcp"
]

# Tool configurations
[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
