[project]
name = "odoo-migration-v15-v16"
version = "1.0.0"
description = "Odoo Migration Tool from v15 to v16"
authors = [
    {name = "Migration Team"}
]
dependencies = [
    "psycopg2-binary>=2.9.0",
    "click>=8.0.0",
    "python-dateutil>=2.8.0",
    "requests>=2.25.0",
    "docker>=6.0.0",
    "colorama>=0.4.4",
    "tabulate>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0"
]
requires-python = ">=3.8"

[project.scripts]
migrate = "main:cli"
health-check = "src.health_check:main"
db-setup = "src.database_setup:main"
analyze = "src.database_analyzer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0"
]
