[project]
name = "odoo-migration-v15-v16"
version = "1.0.0"
description = "Simple Odoo Migration Tool v15→v16"
authors = [
    {name = "Migration Team"}
]
dependencies = [
    "click>=8.0.0",
    "psycopg2-binary>=2.9.0",
    "rich>=13.0.0"
]
requires-python = ">=3.10"

[project.scripts]
migrate = "main:cli"
odoo-migrate = "main:cli"
health-check = "main:health_check_entry"
check = "main:check_entry"
delete-db = "main:delete_db_entry"
create-demo = "main:create_demo_entry"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
