[project]
name = "odoo-migration-v15-v16"
version = "1.0.0"
description = "Simple Odoo Migration Tool v15→v16"
authors = [
    {name = "Migration Team"}
]
dependencies = [
    "click>=8.0.0",
    "psycopg2-binary>=2.9.0",
    "rich>=13.0.0"
]
requires-python = ">=3.10"

[project.scripts]
# Main CLI entry points
migrate = "main:cli"
odoo-migrate = "main:cli"

#1. Health check commands
health-check = "main:health_check_entry"
check = "main:check_entry"

#2. Database management commands
setup-db = "main:setup_db_entry"
check-db = "main:check_db_entry"
cleanup-db = "main:cleanup_db_entry"
delete-db = "main:delete_db_entry"

# Demo database commands
create-demo = "main:create_demo_entry"
create-demo-db = "main:create_demo_db_entry"
create-demo-pair = "main:create_demo_pair_entry"
list-demo-db = "main:list_demo_db_entry"
delete-demo-db = "main:delete_demo_db_entry"

# Configuration commands
config-generate = "main:config_generate_entry"
config-sync = "main:config_generate_entry"

#3. Migration workflow commands
analyze-db = "main:analyze_db_entry"
plan-migration = "main:plan_migration_entry"
validate = "main:validate_entry"

# Information commands
status = "main:status_entry"
info = "main:info_entry"


[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
